--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -102,6 +102,7 @@
     <DCCReference Include="i_IGPSRecorder.pas" />
     <DCCReference Include="i_IGSMGeoCodeConfig.pas" />
     <DCCReference Include="i_IHybrChangeMessage.pas" />
+    <DCCReference Include="i_IJclListenerNotifierLinksList.pas" />
     <DCCReference Include="i_IKmlInfoSimpleLoader.pas" />
     <DCCReference Include="i_ILanguageManager.pas" />
     <DCCReference Include="i_ILineOnMapEdit.pas" />
@@ -394,6 +395,7 @@
     <DCCReference Include="u_HybrChangeMessage.pas" />
     <DCCReference Include="u_InetConfig.pas" />
     <DCCReference Include="u_InterfacedThread.pas" />
+    <DCCReference Include="u_JclListenerNotifierLinksList.pas" />
     <DCCReference Include="u_KmlInfoSimple.pas" />
     <DCCReference Include="u_KmlInfoSimpleParser.pas" />
     <DCCReference Include="u_KmzInfoSimpleParser.pas" />
