--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -96,6 +96,7 @@
     <DCCReference Include="i_IContentTypeManager.pas" />
     <DCCReference Include="i_ICoordConverter.pas" />
     <DCCReference Include="i_ICoordConverterFactory.pas" />
+    <DCCReference Include="i_IDownloadInfoSimple.pas" />
     <DCCReference Include="i_IGPSModule.pas" />
     <DCCReference Include="i_IGPSModuleByCOMPortSettings.pas" />
     <DCCReference Include="i_IGPSRecorder.pas" />
@@ -370,6 +371,7 @@
     <DCCReference Include="u_CoordConverterMercatorOnEllipsoid.pas" />
     <DCCReference Include="u_CoordConverterMercatorOnSphere.pas" />
     <DCCReference Include="u_CoordConverterSimpleLonLat.pas" />
+    <DCCReference Include="u_DownloadInfoSimple.pas" />
     <DCCReference Include="u_EnumUnknown.pas" />
     <DCCReference Include="u_EnumUnknownEmpty.pas" />
     <DCCReference Include="u_GarbageCollectorThread.pas" />
