--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -392,6 +392,7 @@
     <DCCReference Include="u_GlobalState.pas" />
     <DCCReference Include="u_GPSLogWriterToPlt.pas" />
     <DCCReference Include="u_GPSModuleAbstract.pas" />
+    <DCCReference Include="u_GPSModuleByCOMPortConfigSatic.pas" />
     <DCCReference Include="u_GPSModuleByCOMPortSettings.pas" />
     <DCCReference Include="u_GPSModuleByZylGPS.pas" />
     <DCCReference Include="u_GPSPositionStatic.pas" />
