--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -117,6 +117,7 @@
     <DCCReference Include="i_IMapChangeMessage.pas" />
     <DCCReference Include="i_IMapLayerGPSMarkerConfig.pas" />
     <DCCReference Include="i_IMapLayerGPSTrackConfig.pas" />
+    <DCCReference Include="i_IMapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="i_IMapTypeMenuItem.pas" />
     <DCCReference Include="i_IMapTypeMenuItmesList.pas" />
     <DCCReference Include="i_IMapViewGoto.pas" />
@@ -418,6 +419,7 @@
     <DCCReference Include="u_LogForTaskThread.pas" />
     <DCCReference Include="u_MainActiveMap.pas" />
     <DCCReference Include="u_MainFormConfig.pas" />
+    <DCCReference Include="u_MainFormLayersConfig.pas" />
     <DCCReference Include="u_MainFormMainConfig.pas" />
     <DCCReference Include="u_MainMapsConfig.pas" />
     <DCCReference Include="u_MainWindowPositionConfig.pas" />
@@ -432,6 +434,7 @@
     <DCCReference Include="u_MapLayerGPSMarkerConfig.pas" />
     <DCCReference Include="u_MapLayerGPSTrackConfig.pas" />
     <DCCReference Include="u_MapLayerGridsConfig.pas" />
+    <DCCReference Include="u_MapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="u_MapMarksBitmapLayerProviderStuped.pas" />
     <DCCReference Include="u_MapsConfigByConfigDataProvider.pas" />
     <DCCReference Include="u_MapTypeBasic.pas" />
