--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -112,6 +112,7 @@
     <DCCReference Include="i_ILocalCoordConverterFactorySimpe.pas" />
     <DCCReference Include="i_ILogForTaskThread.pas" />
     <DCCReference Include="i_ILogSimple.pas" />
+    <DCCReference Include="i_IMainFormBehaviourByGPSConfig.pas" />
     <DCCReference Include="i_IMainWindowPosition.pas" />
     <DCCReference Include="i_IMapCalibration.pas" />
     <DCCReference Include="i_IMapChangeMessage.pas" />
@@ -418,6 +419,7 @@
     <DCCReference Include="u_LocalCoordConverterFactorySimpe.pas" />
     <DCCReference Include="u_LogForTaskThread.pas" />
     <DCCReference Include="u_MainActiveMap.pas" />
+    <DCCReference Include="u_MainFormBehaviourByGPSConfig.pas" />
     <DCCReference Include="u_MainFormConfig.pas" />
     <DCCReference Include="u_MainFormLayersConfig.pas" />
     <DCCReference Include="u_MainFormMainConfig.pas" />
