Полностью расковырял работу с метками. Ничего не компилится и еще долго работать не будет.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -151,12 +151,14 @@
     <DCCReference Include="i_ITileStorageType.pas" />
     <DCCReference Include="i_ITileStorageTypeInfo.pas" />
     <DCCReference Include="i_IUrlByCoordProvider.pas" />
+    <DCCReference Include="i_IUsedMarksConfig.pas" />
     <DCCReference Include="i_IValueToStringConverter.pas" />
     <DCCReference Include="i_MainFormConfig.pas" />
     <DCCReference Include="i_MapLayerGridsConfig.pas" />
     <DCCReference Include="i_MapTypeIconsList.pas" />
     <DCCReference Include="i_MapTypes.pas" />
     <DCCReference Include="i_Marks.pas" />
+    <DCCReference Include="i_MarksSimple.pas" />
     <DCCReference Include="i_MemCache.pas" />
     <DCCReference Include="MapLayers\u_CenterScale.pas" />
     <DCCReference Include="MapLayers\u_LayerScaleLine.pas" />
@@ -466,11 +468,14 @@
     <DCCReference Include="u_MapViewPortState.pas" />
     <DCCReference Include="u_MarkBasic.pas" />
     <DCCReference Include="u_MarkCategory.pas" />
+    <DCCReference Include="u_MarkCategoryDB.pas" />
     <DCCReference Include="u_MarkPictureListSimple.pas" />
     <DCCReference Include="u_MarkPictureSimple.pas" />
     <DCCReference Include="u_MarksDbGUIHelper.pas" />
+    <DCCReference Include="u_MarksOnlyDb.pas" />
     <DCCReference Include="u_MarksReadWriteSimple.pas" />
     <DCCReference Include="u_MarksSimple.pas" />
+    <DCCReference Include="u_MarksSimpleNew.pas" />
     <DCCReference Include="u_MemFileCache.pas" />
     <DCCReference Include="u_MiniMapMenuItemsFactory.pas" />
     <DCCReference Include="u_NavigationToPoint.pas" />
@@ -512,6 +517,8 @@
     <DCCReference Include="u_TileStorageGEStuped.pas" />
     <DCCReference Include="u_TileStorageTypeInfo.pas" />
     <DCCReference Include="u_UrlGenerator.pas" />
+    <DCCReference Include="u_UsedMarksConfig.pas" />
+    <DCCReference Include="u_UsedMarksConfigStatic.pas" />
     <DCCReference Include="u_ValueToStringConverter.pas" />
     <DCCReference Include="u_ValueToStringConverterConfig.pas" />
     <DCCReference Include="u_WindowLayerBasicList.pas" />
