--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -110,6 +110,7 @@
     <DCCReference Include="i_IImportFile.pas" />
     <DCCReference Include="i_IJclListenerNotifierLinksList.pas" />
     <DCCReference Include="i_IKmlInfoSimpleLoader.pas" />
+    <DCCReference Include="i_IKmlLayerConfig.pas" />
     <DCCReference Include="i_ILanguageManager.pas" />
     <DCCReference Include="i_ILastSelectionInfo.pas" />
     <DCCReference Include="i_ILineOnMapEdit.pas" />
