--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -158,6 +158,7 @@
     <DCCReference Include="i_IUrlByCoordProvider.pas" />
     <DCCReference Include="i_IUsedMarksConfig.pas" />
     <DCCReference Include="i_IValueToStringConverter.pas" />
+    <DCCReference Include="i_IViewPortState.pas" />
     <DCCReference Include="i_MainFormConfig.pas" />
     <DCCReference Include="i_MapLayerGridsConfig.pas" />
     <DCCReference Include="i_MapTypeIconsList.pas" />
@@ -477,6 +478,7 @@
     <DCCReference Include="u_MapTypesMainList.pas" />
     <DCCReference Include="u_MapViewGotoOnFMain.pas" />
     <DCCReference Include="u_MapViewPortState.pas" />
+    <DCCReference Include="u_MapViewPortStateNew.pas" />
     <DCCReference Include="u_MarkBasic.pas" />
     <DCCReference Include="u_MarkCategory.pas" />
     <DCCReference Include="u_MarkCategoryDB.pas" />
