--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -347,6 +347,7 @@
     <DCCReference Include="u_ActiveMapConfig.pas" />
     <DCCReference Include="u_ActiveMapSingleAbstract.pas" />
     <DCCReference Include="u_ActiveMapsSet.pas" />
+    <DCCReference Include="u_ActiveMapTBXItem.pas" />
     <DCCReference Include="u_ActiveMapWithHybrConfig.pas" />
     <DCCReference Include="u_ActivMapWithLayers.pas" />
     <DCCReference Include="u_AntiBanStuped.pas" />
@@ -472,7 +473,6 @@
     <DCCReference Include="u_MapTypeCacheConfig.pas" />
     <DCCReference Include="u_MapTypeIconsList.pas" />
     <DCCReference Include="u_MapTypeList.pas" />
-    <DCCReference Include="u_MapTypeMenuItemBasic.pas" />
     <DCCReference Include="u_MapTypeMenuItemsGeneratorBasic.pas" />
     <DCCReference Include="u_MapTypeMenuItmesList.pas" />
     <DCCReference Include="u_MapTypesMainList.pas" />
