--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -142,6 +142,7 @@
     <DCCReference Include="i_IPoolElement.pas" />
     <DCCReference Include="i_IPosChangeMessage.pas" />
     <DCCReference Include="i_IProxySettings.pas" />
+    <DCCReference Include="i_IScaleLineConfig.pas" />
     <DCCReference Include="i_ISearchResultPresenter.pas" />
     <DCCReference Include="i_ISensor.pas" />
     <DCCReference Include="i_ISimpleFactory.pas" />
@@ -510,6 +511,7 @@
     <DCCReference Include="u_PosChangeMessage.pas" />
     <DCCReference Include="u_ProxyConfig.pas" />
     <DCCReference Include="u_SaveLoadTBConfigByConfigProvider.pas" />
+    <DCCReference Include="u_ScaleLineConfig.pas" />
     <DCCReference Include="u_SearchResultPresenterStuped.pas" />
     <DCCReference Include="u_ShortcutManager.pas" />
     <DCCReference Include="u_StatBarConfig.pas" />
