--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -88,6 +88,7 @@
     <DCCReference Include="i_IBitmapLayerProvider.pas" />
     <DCCReference Include="i_IBitmapPostProcessingConfig.pas" />
     <DCCReference Include="i_IBitmapTypeExtManager.pas" />
+    <DCCReference Include="i_ICalcLineLayerConfig.pas" />
     <DCCReference Include="i_ICenterScaleConfig.pas" />
     <DCCReference Include="i_IConfigDataElement.pas" />
     <DCCReference Include="i_IConfigDataProvider.pas" />
@@ -353,6 +354,7 @@
     <DCCReference Include="u_BaseGridConfig.pas" />
     <DCCReference Include="u_BitmapPostProcessingConfig.pas" />
     <DCCReference Include="u_BitmapTypeExtManagerSimple.pas" />
+    <DCCReference Include="u_CalcLineLayerConfig.pas" />
     <DCCReference Include="u_CenterScaleConfig.pas" />
     <DCCReference Include="u_ClipPolygonByRect.pas" />
     <DCCReference Include="u_CommonFormAndFrameParents.pas" />
