--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -138,6 +138,7 @@
     <DCCReference Include="i_INavigationToPoint.pas" />
     <DCCReference Include="i_IObjectWithTTL.pas" />
     <DCCReference Include="i_IPathDetalizeProvider.pas" />
+    <DCCReference Include="i_IPolygonLayerConfig.pas" />
     <DCCReference Include="i_IPolyLineLayerConfig.pas" />
     <DCCReference Include="i_IPoolElement.pas" />
     <DCCReference Include="i_IPosChangeMessage.pas" />
@@ -503,6 +504,7 @@
     <DCCReference Include="u_NotifyWithGUIDEvent.pas" />
     <DCCReference Include="u_PathDetalizeProviderMailRu.pas" />
     <DCCReference Include="u_PathDetalizeProviderYourNavigation.pas" />
+    <DCCReference Include="u_PolygonLayerConfig.pas" />
     <DCCReference Include="u_PolyLineLayerConfig.pas" />
     <DCCReference Include="u_PoolElement.pas" />
     <DCCReference Include="u_PoolOfObjectsSimple.pas" />
