Новый базовый класс для слоев с одиночным полигоном

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -507,6 +507,7 @@
     <DCCReference Include="u_PathDetalizeProviderMailRu.pas" />
     <DCCReference Include="u_PathDetalizeProviderYourNavigation.pas" />
     <DCCReference Include="u_PolygonLayerConfig.pas" />
+    <DCCReference Include="u_PolyLineLayerBase.pas" />
     <DCCReference Include="u_PolyLineLayerConfig.pas" />
     <DCCReference Include="u_PoolElement.pas" />
     <DCCReference Include="u_PoolOfObjectsSimple.pas" />
