--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -100,6 +100,7 @@
     <DCCReference Include="i_ICoordConverterFactory.pas" />
     <DCCReference Include="i_IDatum.pas" />
     <DCCReference Include="i_IDownloadInfoSimple.pas" />
+    <DCCReference Include="i_IFillingMapLayerConfig.pas" />
     <DCCReference Include="i_IGeoCoderList.pas" />
     <DCCReference Include="i_IGPSModule.pas" />
     <DCCReference Include="i_IGPSModuleByCOMPortSettings.pas" />
@@ -404,6 +405,9 @@
     <DCCReference Include="u_DownloadInfoSimple.pas" />
     <DCCReference Include="u_EnumUnknown.pas" />
     <DCCReference Include="u_EnumUnknownEmpty.pas" />
+    <DCCReference Include="u_FillingMapLayerConfig.pas" />
+    <DCCReference Include="u_FillingMapLayerConfigStatic.pas" />
+    <DCCReference Include="u_FillingMapMapsConfig.pas" />
     <DCCReference Include="u_GarbageCollectorThread.pas" />
     <DCCReference Include="u_GECache.pas" />
     <DCCReference Include="u_GECrypt.pas" />
