Новый конфиг для загрузчика отображаемых тайлов

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -100,6 +100,7 @@
     <DCCReference Include="i_ICoordConverterFactory.pas" />
     <DCCReference Include="i_IDatum.pas" />
     <DCCReference Include="i_IDownloadInfoSimple.pas" />
+    <DCCReference Include="i_IDownloadUIConfig.pas" />
     <DCCReference Include="i_IFillingMapLayerConfig.pas" />
     <DCCReference Include="i_IGeoCoderList.pas" />
     <DCCReference Include="i_IGPSModule.pas" />
@@ -403,6 +404,7 @@
     <DCCReference Include="u_CoordConverterSimpleLonLat.pas" />
     <DCCReference Include="u_Datum.pas" />
     <DCCReference Include="u_DownloadInfoSimple.pas" />
+    <DCCReference Include="u_DownloadUIConfig.pas" />
     <DCCReference Include="u_EnumUnknown.pas" />
     <DCCReference Include="u_EnumUnknownEmpty.pas" />
     <DCCReference Include="u_FillingMapLayerConfig.pas" />
