--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -104,6 +104,7 @@
     <DCCReference Include="i_IFillingMapLayerConfig.pas" />
     <DCCReference Include="i_IGeoCoderList.pas" />
     <DCCReference Include="i_IGPSModule.pas" />
+    <DCCReference Include="i_IGPSModuleByCOM.pas" />
     <DCCReference Include="i_IGPSModuleByCOMPortSettings.pas" />
     <DCCReference Include="i_IGPSRecorder.pas" />
     <DCCReference Include="i_IGSMGeoCodeConfig.pas" />
