Форма для отображения дебажной инфы по перерисовке слоев

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -56,6 +56,9 @@
       <Form>DMMarksDb</Form>
       <DesignClass>TDataModule</DesignClass>
     </DCCReference>
+    <DCCReference Include="frm_DebugInfo.pas">
+      <Form>frmDebugInfo</Form>
+    </DCCReference>
     <DCCReference Include="frm_GoTo.pas">
       <Form>frmGoTo</Form>
     </DCCReference>
