--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -106,6 +106,7 @@
     <DCCReference Include="i_IDownloadUIConfig.pas" />
     <DCCReference Include="i_IFillingMapLayerConfig.pas" />
     <DCCReference Include="i_IGeoCoderList.pas" />
+    <DCCReference Include="i_IGlobalViewMainConfig.pas" />
     <DCCReference Include="i_IGPSConfig.pas" />
     <DCCReference Include="i_IGPSModule.pas" />
     <DCCReference Include="i_IGPSModuleByCOM.pas" />
@@ -433,6 +434,7 @@
     <DCCReference Include="u_GETexture.pas" />
     <DCCReference Include="u_GlobalCahceConfig.pas" />
     <DCCReference Include="u_GlobalState.pas" />
+    <DCCReference Include="u_GlobalViewMainConfig.pas" />
     <DCCReference Include="u_GPSConfig.pas" />
     <DCCReference Include="u_GPSLogWriterToPlt.pas" />
     <DCCReference Include="u_GPSModuleAbstract.pas" />
